deployment/node-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-web-app-deployment
  namespace: node-web-project
spec:
  selector:
    matchLabels:
      app: node-web-app
  replicas: 3
  template:
    metadata:
      labels:
        app: node-web-app
        version: 1.1.8
    spec:
      containers:
      - name: node-web-app
        image: tiggel/node-web-demo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: dockercreds
