deployment/node-web-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-web-app-route
  namespace: node-web-project
spec:
  #host: node-web-app-service-node-web-project.mycluster-120885-a286db53404b3bb06d7b0588f942fe63-0000.us-south.containers.appdomain.cloud
  to:
    kind: Service
    name: node-web-app-service
    weight: 100
